# l2-chains-holding-wallet

./: README.md
rustt/web3_wallet/: Cargo.toml
rustt/web3_wallet/src/: main.rs
